hphp/hack/test/typecheck/new_inference/typehole/lambda_tyvar.php.exp
ERROR: File "lambda_tyvar.php", line 7, characters 31-32:
Was expecting an object but type is unknown (Typing[4297])
  File "lambda_tyvar.php", line 7, characters 9-22:
  It is unknown because type parameter `T` of `just_return_it` could not be determined. Please add explicit type parameters to the invocation of `just_return_it`
  File "lambda_tyvar.php", line 4, characters 38-38:
    via this generic `T`
ERROR: File "lambda_tyvar.php", line 8, characters 42-43:
Was expecting an object but type is unknown (Typing[4297])
  File "lambda_tyvar.php", line 8, characters 9-22:
  It is unknown because type parameter `T` of `just_return_it` could not be determined. Please add explicit type parameters to the invocation of `just_return_it`
  File "lambda_tyvar.php", line 4, characters 38-38:
    via this generic `T`
